<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="goal">Goal</string>
    <string name="foul">Foul</string>
    <string name="yellow_card">Yellow card</string>
    <string name="red_card">Red card</string>
    <string name="reset">Reset</string>
    <string name="starting_point">0</string>
</resources>
