<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/football" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Teams A and B-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Team A-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Display text for Team A -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/team_a"
                        android:textColor="@color/displayTeamName"
                        android:textSize="20sp" />

                    <!--Score text-->
                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/starting_point"
                        android:textColor="@color/displayStatisticsColor"
                        android:textSize="56sp" />

                    <!-- LinearLayout for foul/yellow card/red card display-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/a_display_foul"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableBottom="@drawable/foul"
                            android:gravity="center_horizontal"
                            android:text="@string/starting_point"
                            android:textColor="@color/displayStatisticsColor"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/a_display_yellow"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableBottom="@drawable/yellowcard"
                            android:gravity="center_horizontal"
                            android:text="@string/starting_point"
                            android:textColor="@color/displayStatisticsColor"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/a_display_red"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableBottom="@drawable/redcard"
                            android:gravity="center_horizontal"
                            android:text="@string/starting_point"
                            android:textColor="@color/displayStatisticsColor"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <!-- GOALS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/goalColor"
                        android:onClick="addGoalForTeamA"
                        android:text="@string/goal" />

                    <!-- FOULS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@color/foulColor"
                        android:onClick="addFoulForTeamA"
                        android:text="@string/foul" />

                    <!-- YELLOW CARDS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@color/yellowCardColor"
                        android:onClick="addYellowForTeamA"
                        android:text="@string/yellow_card" />

                    <!-- RED CARDS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@color/redCardColor"
                        android:onClick="addRedForTeamA"
                        android:text="@string/red_card" />

                </LinearLayout>

                <!--Team B-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Display text for Team B -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/team_b"
                        android:textColor="@color/displayTeamName"
                        android:textSize="20sp" />

                    <!--Score text-->
                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/starting_point"
                        android:textColor="@color/displayStatisticsColor"
                        android:textSize="56sp" />

                    <!-- LinearLayout for foul/yellow card/red card display-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/b_display_foul"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableBottom="@drawable/foul"
                            android:gravity="center_horizontal"
                            android:text="@string/starting_point"
                            android:textColor="@color/displayStatisticsColor"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/b_display_yellow"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableBottom="@drawable/yellowcard"
                            android:gravity="center_horizontal"
                            android:text="@string/starting_point"
                            android:textColor="@color/displayStatisticsColor"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/b_display_red"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableBottom="@drawable/redcard"
                            android:gravity="center_horizontal"
                            android:text="@string/starting_point"
                            android:textColor="@color/displayStatisticsColor"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <!-- GOALS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/goalColor"
                        android:onClick="addGoalForTeamB"
                        android:text="@string/goal" />

                    <!-- FOULS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@color/foulColor"
                        android:onClick="addFoulForTeamB"
                        android:text="@string/foul" />

                    <!-- YELLOW CARDS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@color/yellowCardColor"
                        android:onClick="addYellowForTeamB"
                        android:text="@string/yellow_card" />

                    <!-- RED CARDS -->
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@color/redCardColor"
                        android:onClick="addRedForTeamB"
                        android:text="@string/red_card" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@color/resetColor"
                android:onClick="resetScore"
                android:text="@string/reset" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
